Endret mer på css på homepage, og prøvde å legge til database fra render, men må bruke localhost

--- a/Energidrikkfabrikken/appsettings.json
+++ b/Energidrikkfabrikken/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=postgres://dpg-chnj1ahmbg5577lu8m10-a.frankfurt-postgres.render.com;User Id=david;Password=e5BG2BvMDMA4fIASvMCYvs2oS1wathEl;Database=energidrikkfabrikkendb;Trusted_Connection=true;TrustServerCertificate=True"
+  }
 }
