--- a/Energidrikkfabrikken/appsettings.json
+++ b/Energidrikkfabrikken/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=postgres://dpg-chnj1ahmbg5577lu8m10-a.frankfurt-postgres.render.com;User Id=david;Password=e5BG2BvMDMA4fIASvMCYvs2oS1wathEl;Database=energidrikkfabrikkendb;Trusted_Connection=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=EnergidrikkfabrikkenDb;Trusted_Connection=true;TrustServerCertificate=True"
   }
 }
