--- a/Energidrikkfabrikken/Energidrikkfabrikken.csproj
+++ b/Energidrikkfabrikken/Energidrikkfabrikken.csproj
@@ -13,6 +13,10 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.1.1-rc">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
@@ -61,6 +65,11 @@
       <_ContentIncludedByDefault Remove="wwwroot\lib\bootstrap\dist\js\bootstrap.min.js" />
       <_ContentIncludedByDefault Remove="wwwroot\lib\bootstrap\dist\js\bootstrap.min.js.map" />
       <_ContentIncludedByDefault Remove="wwwroot\lib\bootstrap\LICENSE" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <TypeScriptCompile Include="wwwroot\typeScript\energydrink.ts" />
+      <TypeScriptCompile Include="wwwroot\typeScript\index.ts" />
     </ItemGroup>
 
 </Project>
